WiP Minor Changes
Implemented Twig differently, will see if this is easier or not.
Included Skeleton CSS and created mock front page for now.

--- a/app/templates/index.html.twig
+++ b/app/templates/index.html.twig
@@ -1,7 +1,22 @@
 {% extends 'layout.html.twig' %}
 
-{% block content %}
-<h1>Hello</h1>
+{% block stylesheet %}
+<link href="css/normalize.css" rel="stylesheet" />
+<link href="css/skeleton.css" rel="stylesheet" />
+{% endblock %}
 
-<h2>{{ name }}</h2>
+{% block heading %}
+<h1 class="title">Red-Child</h1>
+{% endblock %}
+
+{% block subheading %}
+<h2 class="title">Something</h2>
+{% endblock %}
+
+{% block blurb %}
+Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+{% endblock %}
+
+{% block blurb2 %}
+Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
 {% endblock %}
